# EndlesshReportGenerator

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile  Makefile  README.md  main.cpp
.github/: FUNDING.yml
.github/workflows/: cmake.yml  codeql-analysis.yml
include/: extensions.hpp  options.hpp  version.hpp.in
src/: main.cpp
